Added new image file logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Research Society of WIUT</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navigation">
+            <ul>Home</ul>
+        </nav>
+    </header>
+    <!--Can add a background picture to the site and lay the content on top of the image-->
 </body>
 </html>
